feat: updated three_legged device-status-connectivity-read and response parameter

--- a/code/API_definitions/device-status.yaml
+++ b/code/API_definitions/device-status.yaml
@@ -470,9 +470,9 @@ components:
     ConnectivityStatusResponse:
       type: object
       required:
-        - connected
+        - connectivityStatus
       properties:
-        connected:
+        connectivityStatus:
           $ref: '#/components/schemas/ConnectivityStatus'
 
     ConnectivityStatus:
