--- a/code/API_definitions/device-status.yaml
+++ b/code/API_definitions/device-status.yaml
@@ -856,7 +856,7 @@ components:
     ROAMING_STATUS:
       value:
         id: 123654
-        source: supertelco.notificationSendServer12
+        source: https://notificationSendServer12.supertelco.com
         type: org.camaraproject.device-status.v0.roaming-status
         specversion: "1.0"
         datacontenttype: application/json
