--- a/code/API_definitions/device-status.yaml
+++ b/code/API_definitions/device-status.yaml
@@ -912,7 +912,7 @@ components:
     SUBSCRIPTION_ENDS:
       value:
         id: 123658
-        source: supertelco.notificationSendServer12
+        source: https://notificationSendServer12.supertelco.com
         type: org.camaraproject.device-status.v0.subscription-ends
         specversion: "1.0"
         datacontenttype: application/json
