--- a/code/API_definitions/device-status.yaml
+++ b/code/API_definitions/device-status.yaml
@@ -872,7 +872,7 @@ components:
     ROAMING_OFF:
       value:
         id: 123655
-        source: supertelco.notificationSendServer12
+        source: https://notificationSendServer12.supertelco.com
         type: org.camaraproject.device-status.v0.roaming-off
         specversion: "1.0"
         datacontenttype: application/json
